<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="4dp"
    android:layout_width="match_parent"
    android:layout_height="@dimen/content_list_height"
    android:paddingLeft="@dimen/content_horizontal_padding"
    android:paddingStart="@dimen/content_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/content_horizontal_padding"
    >

    <RelativeLayout
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ToggleButton
            android:id="@+id/alarm_on_off_icon"
            style="@style/toggleButton"
            android:background="@drawable/alarm_set_icon_bg"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_width="@dimen/content_image_width"
            android:layout_height="@dimen/content_image_height"/>

        <LinearLayout
            android:id="@+id/alarm_content_layout"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_toRightOf="@id/alarm_on_off_icon"
            android:layout_toEndOf="@id/alarm_on_off_icon">

            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/alarm_title"
                    tools:text="10:00 AM (수요일)"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:layout_marginBottom="@dimen/content_space_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/alarm_content"
                    tools:text="간단한 알람 메시지입니다."
                    android:maxLines="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:layout_marginTop="@dimen/content_space_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_toRightOf="@id/alarm_content_layout"
            android:layout_toEndOf="@id/alarm_content_layout"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sunday"
                android:text="@string/sunday"
                android:layout_marginLeft="@dimen/content_small_margin"
                android:layout_marginStart="@dimen/content_small_margin"
                android:layout_marginRight="@dimen/content_small_margin"
                android:layout_marginEnd="@dimen/content_small_margin"
                android:textColor="@color/colorGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/monday"
                android:text="@string/monday"
                android:layout_marginLeft="@dimen/content_small_margin"
                android:layout_marginStart="@dimen/content_small_margin"
                android:layout_marginRight="@dimen/content_small_margin"
                android:layout_marginEnd="@dimen/content_small_margin"
                android:textColor="@color/colorGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tuesday"
                android:text="@string/tuesday"
                android:layout_marginLeft="@dimen/content_small_margin"
                android:layout_marginStart="@dimen/content_small_margin"
                android:layout_marginRight="@dimen/content_small_margin"
                android:layout_marginEnd="@dimen/content_small_margin"
                android:textColor="@color/colorGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/wednesday"
                android:text="@string/wednesday"
                android:layout_marginLeft="@dimen/content_small_margin"
                android:layout_marginStart="@dimen/content_small_margin"
                android:layout_marginRight="@dimen/content_small_margin"
                android:layout_marginEnd="@dimen/content_small_margin"
                android:textColor="@color/colorGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/thursday"
                android:text="@string/thursday"
                android:layout_marginLeft="@dimen/content_small_margin"
                android:layout_marginStart="@dimen/content_small_margin"
                android:layout_marginRight="@dimen/content_small_margin"
                android:layout_marginEnd="@dimen/content_small_margin"
                android:textColor="@color/colorGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/friday"
                android:text="@string/friday"
                android:layout_marginLeft="@dimen/content_small_margin"
                android:layout_marginStart="@dimen/content_small_margin"
                android:layout_marginRight="@dimen/content_small_margin"
                android:layout_marginEnd="@dimen/content_small_margin"
                android:textColor="@color/colorGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/saturday"
                android:text="@string/saturday"
                android:layout_marginLeft="@dimen/content_small_margin"
                android:layout_marginStart="@dimen/content_small_margin"
                android:layout_marginRight="@dimen/content_small_margin"
                android:layout_marginEnd="@dimen/content_small_margin"
                android:textColor="@color/colorGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:layout_alignLeft="@id/alarm_content_layout"
            android:layout_alignStart="@id/alarm_content_layout"
            android:layout_marginRight="@dimen/content_vertical_padding"
            android:layout_marginEnd="@dimen/content_vertical_padding"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>